--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.4.1
+beautifulsoup4==4.10.0
+botocore==1.23.8
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.7
 colorclass==2.2.0
 dj-database-url==0.5.0
 Django==3.2.9
+django-bootstrap-v5==1.0.7
 docopt==0.6.2
 docutils==0.18
 gitdb==4.0.9
@@ -12,6 +15,7 @@ gitdb2==4.0.2
 GitPython==3.1.24
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==3.10.1
 jmespath==0.10.0
 olefile==0.46
 packaging==21.2
@@ -27,6 +31,7 @@ s3transfer==0.5.0
 six==1.16.0
 smmap==5.0.0
 smmap2==3.0.1
+soupsieve==2.3.1
 sqlparse==0.4.2
 stripe==2.61.0
 terminaltables==3.1.0
@@ -34,3 +39,4 @@ typing-extensions==3.10.0.2
 upgrade-requirements==1.7.0
 urllib3==1.26.7
 whitenoise==5.3.0
+zipp==3.6.0
