--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorclass==2.2.0
 dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap-v5==1.0.7
+django-cors-headers==3.10.0
 docopt==0.6.2
 docutils==0.18
 gitdb==4.0.9
